Initial CLI check-in